--- a/src/index.html
+++ b/src/index.html
@@ -449,10 +449,10 @@
           <h3 class="title popup__title">Обратная связь</h3>
         </div>
         <form action="#" method="get" class="form">
-          <input type="text" name="name" id="name" class="input form__input" placeholder="Имя">
-          <input type="tel" name="phone" id="phone" class="input form__input" placeholder="Телефон">
-          <input type="email" name="email" id="email" class="input form__input" placeholder="Электронная почта">
-          <textarea name="message" id="message" class="input form__textarea" placeholder="Сообщение"></textarea>
+          <input required type="text" name="name" id="name" class="input form__input" placeholder="Имя">
+          <input required type="tel" name="phone" id="phone" class="input form__input" placeholder="Телефон">
+          <input required type="email" name="email" id="email" class="input form__input" placeholder="Электронная почта">
+          <textarea required name="message" id="message" class="input form__textarea" placeholder="Сообщение"></textarea>
           <div class="form__policy">
             <p class="policy">
               Нажимая “отправить”, вы даете согласие на
